| Summary: | ASTERISK-26558: app_queue: add variable to know if the call is not answered after a queue | ||
| Reporter: | Sebastian Gutierrez (sum) | Labels: | |
| Date Opened: | 2016-11-06 06:02:27.000-0600 | Date Closed: | 2016-11-10 06:53:08.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 13.12.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The idea is to be able to identify in the dialplan if a call was answered or abandoned by an agent.
the following patch sets the variable ABANDONED to TRUE if the call was not answered, this allows in the dialplan if you are using de c option in the queues that in the next dialplan priority you can know if the call was answered or not to take different actions. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-11-06 06:02:28.318-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2016-11-10 06:53:09.463-0600 Change 4323 merged by Joshua Colp: app_queue: new variable set when abandoned [https://gerrit.asterisk.org/4323|https://gerrit.asterisk.org/4323] By: Friendly Automation (friendly-automation) 2016-11-10 07:48:32.503-0600 Change 4356 merged by Joshua Colp: app_queue: new variable set when abandoned [https://gerrit.asterisk.org/4356|https://gerrit.asterisk.org/4356] By: Friendly Automation (friendly-automation) 2016-11-10 10:21:56.197-0600 Change 4357 merged by Joshua Colp: app_queue: new variable set when abandoned [https://gerrit.asterisk.org/4357|https://gerrit.asterisk.org/4357] By: Friendly Automation (friendly-automation) 2016-11-10 10:22:11.724-0600 Change 4377 merged by Joshua Colp: app_queue: Add mention of 'ABANDON' variable to CHANGES. [https://gerrit.asterisk.org/4377|https://gerrit.asterisk.org/4377] By: Friendly Automation (friendly-automation) 2016-11-10 10:22:20.652-0600 Change 4379 merged by Joshua Colp: app_queue: Add mention of 'ABANDON' variable to CHANGES. [https://gerrit.asterisk.org/4379|https://gerrit.asterisk.org/4379] By: Friendly Automation (friendly-automation) 2016-11-10 10:22:30.463-0600 Change 4378 merged by Joshua Colp: app_queue: Add mention of 'ABANDON' variable to CHANGES. [https://gerrit.asterisk.org/4378|https://gerrit.asterisk.org/4378] | ||